--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
 Flask==3.0.0
 requests==2.31.0
-gunicorn
-gspread
-google-auth
-razorpay
-ShopifyAPI
-pyactiveresource
 python-dotenv==1.0.0
-shopify-python-api
+gunicorn==21.2.0
+gspread==5.12.0
+google-auth==2.23.4
+google-auth-oauthlib==1.1.0
+google-auth-httplib2==0.1.1
+razorpay==1.4.1
+ShopifyAPI==12.4.0
+pyactiveresource==2.3.0
+shopify-python-api==1.1.0
