--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ gunicorn==21.2.0
 gspread==5.12.0
 google-auth==2.23.4
 google-auth-oauthlib==1.1.0
+google-api-python-client==2.108.0
 google-auth-httplib2==0.1.1
 razorpay==1.4.1
 ShopifyAPI==12.4.0
